import { INestApplication } from '@nestjs/common';
import { Test, TestingModule } from '@nestjs/testing';
import request from 'supertest';
import { Pool } from 'pg';
import { App } from 'supertest/types';

import { AppModule } from '@/app.module';
import { HttpExceptionFilter } from '@/infra/filters/http.filter';
import { EntityId } from '@/domain/entities';
import { DatabaseConnector, DatabaseSeeder } from '../../utils/seeder';
import {
  infiniteLibrarianJwtTokenMock,
  infiniteTenantJwtTokenMock,
} from '../../mocks/auth.mocks';
import { EntityNotFound } from '../../../src/shared';

describe('Books Controller', () => {
  let app: INestApplication<App>;
  let connection: Pool;
  let databaseSeeder: DatabaseSeeder;

  beforeAll(async () => {
    connection = DatabaseConnector.getInstance();
    databaseSeeder = new DatabaseSeeder(connection);

    const moduleFixture: TestingModule = await Test.createTestingModule({
      imports: [AppModule],
    }).compile();

    app = moduleFixture.createNestApplication();
    app.useGlobalFilters(new HttpExceptionFilter());
    await app.init();
  });

  beforeEach(async () => {
    await databaseSeeder.reset();
  });

  afterAll(async () => {
    await app.close();
    await DatabaseConnector.close();
  });

  describe('Create', () => {
    describe('Success', () => {
      it('Should create a book', async () => {
        const response = await request(app.getHttpServer())
          .post('/books')
          .set({ authorization: infiniteLibrarianJwtTokenMock })
          .send({
            title: 'example title',
            description: 'example description',
            releaseDate: '20250802',
            authorIds: ['a0000000-0000-4000-a000-000000000001'],
          });

        const bookId = response.body.bookId;
        const messageError = response.body?.message;
        expect(messageError).toBeUndefined();
        expect(bookId).toBeDefined();
        expect(EntityId.isValid(bookId as string)).toBeTruthy();
      });
    });

    describe('Errors', () => {
      it('Should throw error if authors not exists', async () => {
        const response = await request(app.getHttpServer())
          .post('/books')
          .set({ authorization: infiniteLibrarianJwtTokenMock })
          .send({
            title: 'example title',
            description: 'example description',
            releaseDate: '20250802',
            authorIds: ['a0000000-0000-4000-a000-100000000001'],
          });

        const bookId = response.body.bookId;
        const messageError = response.body?.message;
        expect(messageError).toBe(new EntityNotFound('Author').message);
        expect(bookId).toBeUndefined();
      });

      it('Should throw error if tenant user was trying to create a new book', async () => {
        const response = await request(app.getHttpServer())
          .post('/books')
          .set({ authorization: infiniteTenantJwtTokenMock })
          .send({
            title: 'example title',
            description: 'example description',
            releaseDate: '20250802',
            authorIds: ['a0000000-0000-4000-a000-000000000001'],
          });

        const body = response.body;
        expect(body.bookId).toBeUndefined();
        expect(body.message).toBe('Librarian access is required.');
        expect(body.statusCode).toBe(401);
      });

      it('Should throw error if token is undefined', async () => {
        const response = await request(app.getHttpServer())
          .post('/books')
          .send({
            title: 'example title',
            description: 'example description',
            releaseDate: '20250802',
            authors: ['Heisenberg'],
          });

        const body = response.body;
        expect(body.bookId).toBeUndefined();
        expect(body.message).toBe('Token is required.');
        expect(body.statusCode).toBe(401);
      });

      it('Should throw error if token is invalid', async () => {
        const response = await request(app.getHttpServer())
          .post('/books')
          .set({ authorization: 'Bearer invalidToken' })
          .send({
            title: 'example title',
            description: 'example description',
            releaseDate: '20250802',
            authors: ['Heisenberg'],
          });

        const body = response.body;
        expect(body.bookId).toBeUndefined();
        expect(body.message).toBe('Invalid token.');
        expect(body.statusCode).toBe(401);
      });
    });
  });

  describe('List', () => {
    describe('Success', () => {
      it('Should list books', async () => {
        const response = await request(app.getHttpServer())
          .get('/books')
          .set({
            authorization: `Bearer ${infiniteTenantJwtTokenMock}`,
          });

        const messageError = response.body?.message;
        const body = response.body;
        const page = body?.page;
        const records = body?.records;
        const books = body?.items;
        expect(messageError).toBeUndefined();
        expect(page).toBe(1);
        expect(records).toBe(9);
        expect(books.length).toBe(9);
        expect(books).toMatchSnapshot();
      });

      it('Should list books using pageSize', async () => {
        const response = await request(app.getHttpServer())
          .get('/books?page=1&pageSize=2')
          .set({
            authorization: `Bearer ${infiniteLibrarianJwtTokenMock}`,
          });

        const messageError = response.body?.message;
        const body = response.body;
        const page = body?.page;
        const records = body?.records;
        const books = body?.items;
        expect(messageError).toBeUndefined();
        expect(page).toBe(1);
        expect(records).toBe(9);
        expect(books.length).toBe(2);
        expect(books).toMatchSnapshot();
      });

      it('Should list books using pageSize and page', async () => {
        const response = await request(app.getHttpServer())
          .get('/books?page=2&pageSize=2')
          .set({
            authorization: `Bearer ${infiniteTenantJwtTokenMock}`,
          });

        const messageError = response.body?.message;
        const body = response.body;
        const page = body?.page;
        const records = body?.records;
        const books = body?.items;
        expect(messageError).toBeUndefined();
        expect(page).toBe(2);
        expect(records).toBe(9);
        expect(books.length).toBe(2);
        expect(books).toMatchSnapshot();
      });

      it('Should search books', async () => {
        const response = await request(app.getHttpServer())
          .get('/books?search=pedra')
          .set({
            authorization: `Bearer ${infiniteTenantJwtTokenMock}`,
          });

        const messageError = response.body?.message;
        const body = response.body;
        const page = body?.page;
        const records = body?.records;
        const books = body?.items;
        expect(messageError).toBeUndefined();
        expect(page).toBe(1);
        expect(records).toBe(1);
        expect(books.length).toBe(1);
        expect(books).toMatchSnapshot();
      });
    });

    describe('Errors', () => {
      it('Should throw error if token is undefined', async () => {
        const response = await request(app.getHttpServer()).get('/books');

        const messageError = response.body?.message;
        expect(messageError).toBe('Token is required.');
      });

      it('Should throw error if token is invalid is null', async () => {
        const response = await request(app.getHttpServer()).get('/books').set({
          authorization: 'Bearer invalidToken',
        });

        const messageError = response.body?.message;
        expect(messageError).toBe('Invalid token.');
      });
    });
  });
});
